<resources>
    <string name="app_name">My App Portofolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_screen_header">My Nanodegree Apps!</string>
    <string name="main_screen_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="main_screen_scores_app">SCORES APP</string>
    <string name="main_screen_library_app">LIBRARY APP</string>
    <string name="main_screen_build_it_bigger">BUILD IT BIGGER</string>
    <string name="main_screen_xyz_reader">XYZ READER</string>
    <string name="main_screen_capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="launch_my_spotify_app">This button will launch my spotify streamer app!</string>
    <string name="launch_my_scores_app">This button will launch my scores app!</string>
    <string name="launch_my_library_app">This button will launch my library app!</string>
    <string name="launch_my_bigger_app">This button will launch my build it bigger app!</string>
    <string name="launch_my_reader_app">This button will launch my xyz reader app!</string>
    <string name="launch_my_capstone_app">This button will launch my capstone app!</string>

</resources>
