<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/main_screen_header"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_label"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dip"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotify_streamer_btn"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_spotify_streamer"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/scores_app_btn"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_scores_app"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/library_app_btn"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_library_app"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/build_it_bigger_btn"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_build_it_bigger"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/xyz_reader_btn"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_xyz_reader"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/capstone_my_own_app_btn"
            android:layout_width="match_parent"
            android:padding="10dip"
            style="@style/MyRedButton"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_capstone_my_own_app"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>
